Changement pour le chargement des images en background sur le menu

--- a/en/theimitationgame.html
+++ b/en/theimitationgame.html
@@ -38,39 +38,27 @@
         <div class="menu__overlay" role="dialog" aria-label="Menu de navigation principal">
             <ul class="menu__list" role="menu">
                 <li>
-                    <a href="index.html" class="menu__button"
-                        style="background-image: url('/assets/img/hero_page_accueil2.avif')">
-                        <span>Home</span>
+                    <a href="index.html" class="menu__button menu__button--home"><span>Home</span>
                     </a>
                 </li>
                 <li>
-                    <a href="adalovelace.html" class="menu__button"
-                        style="background-image: url('/assets/img/card1.avif')">
-                        <span>Ada Lovelace</span>
+                    <a href="adalovelace.html" class="menu__button menu__button--ada"><span>Ada Lovelace</span>
                     </a>
                 </li>
                 <li>
-                    <a href="effetmatilda.html" class="menu__button"
-                        style="background-image: url('/assets/img/card2.avif')">
-                        <span>The Matilda Effect</span>
+                    <a href="effetmatilda.html" class="menu__button menu__button--matilda"><span>The Matilda Effect</span>
                     </a>
                 </li>
                 <li>
-                    <a href="scienceada.html" class="menu__button"
-                        style="background-image: url('/assets/img/card3.avif')">
-                        <span>Science from Ada</span>
+                    <a href="scienceada.html" class="menu__button menu__button--science"><span>Science from Ada</span>
                     </a>
                 </li>
                 <li>
-                    <a href="theimitationgame.html" class="menu__button"
-                        style="background-image: url('/assets/img/card4.avif')">
-                        <span>The Imitation Game</span>
+                    <a href="theimitationgame.html" class="menu__button menu__button--imitation"><span>The Imitation Game</span>
                     </a>
                 </li>
                 <li>
-                    <a href="litterature.html" class="menu__button"
-                        style="background-image: url('/assets/img/card5.avif')">
-                        <span>Ada in Literature</span>
+                    <a href="litterature.html" class="menu__button menu__button--literature"><span>Ada in Literature</span>
                     </a>
                 </li>
             </ul>
