--- a/fr/theimitationgame.html
+++ b/fr/theimitationgame.html
@@ -38,39 +38,27 @@
         <div class="menu__overlay" role="dialog" aria-label="Menu de navigation principal">
             <ul class="menu__list" role="menu">
                 <li>
-                    <a href="index.html" class="menu__button"
-                        style="background-image: url('/assets/img/hero_page_accueil2.avif')">
-                        <span>Page d'accueil</span>
+                    <a href="index.html" class="menu__button menu__button--home"><span>Page d'accueil</span>
                     </a>
                 </li>
                 <li>
-                    <a href="adalovelace.html" class="menu__button"
-                        style="background-image: url('/assets/img/card1.avif')">
-                        <span>Ada Lovelace</span>
+                    <a href="adalovelace.html" class="menu__button menu__button--ada"><span>Ada Lovelace</span>
                     </a>
                 </li>
                 <li>
-                    <a href="effetmatilda.html" class="menu__button"
-                        style="background-image: url('/assets/img/card2.avif')">
-                        <span>L'effet Matilda</span>
+                    <a href="effetmatilda.html" class="menu__button menu__button--matilda"><span>L'effet Matilda</span>
                     </a>
                 </li>
                 <li>
-                    <a href="scienceada.html" class="menu__button"
-                        style="background-image: url('/assets/img/card3.avif')">
-                        <span>La science d'Ada</span>
+                    <a href="scienceada.html" class="menu__button menu__button--science"><span>La science d'Ada</span>
                     </a>
                 </li>
                 <li>
-                    <a href="theimitationgame.html" class="menu__button"
-                        style="background-image: url('/assets/img/card4.avif')">
-                        <span>The Imitation Game</span>
+                    <a href="theimitationgame.html" class="menu__button menu__button--imitation"><span>The Imitation Game</span>
                     </a>
                 </li>
                 <li>
-                    <a href="litterature.html" class="menu__button"
-                        style="background-image: url('/assets/img/card5.avif')">
-                        <span>Ada dans la littérature</span>
+                    <a href="litterature.html" class="menu__button menu__button--literature"><span>Ada dans la littérature</span>
                     </a>
                 </li>
             </ul>
