Ajout de liens off link

--- a/en/litterature.html
+++ b/en/litterature.html
@@ -46,7 +46,8 @@
                     </a>
                 </li>
                 <li>
-                    <a href="effetmatilda.html" class="menu__button menu__button--matilda"><span>The Matilda Effect</span>
+                    <a href="effetmatilda.html" class="menu__button menu__button--matilda"><span>The Matilda
+                            Effect</span>
                     </a>
                 </li>
                 <li>
@@ -54,11 +55,13 @@
                     </a>
                 </li>
                 <li>
-                    <a href="theimitationgame.html" class="menu__button menu__button--imitation"><span>The Imitation Game</span>
+                    <a href="theimitationgame.html" class="menu__button menu__button--imitation"><span>The Imitation
+                            Game</span>
                     </a>
                 </li>
                 <li>
-                    <a href="litterature.html" class="menu__button menu__button--literature"><span>Ada in Literature</span>
+                    <a href="litterature.html" class="menu__button menu__button--literature"><span>Ada in
+                            Literature</span>
                     </a>
                 </li>
             </ul>
@@ -99,6 +102,10 @@
                     minimized or forgotten in favor of men.</p>
             </div>
         </section>
+        <div class="external-link">
+            <a href="https://en.wikipedia.org/wiki/Women_in_science" target="_blank" rel="noopener noreferrer"
+                class="external-link__button">Learn more</a>
+        </div>
     </main>
     <footer class="footer" role="contentinfo">
         <div class="footer__left">
