--- a/en/scienceada.html
+++ b/en/scienceada.html
@@ -46,7 +46,8 @@
                     </a>
                 </li>
                 <li>
-                    <a href="effetmatilda.html" class="menu__button menu__button--matilda"><span>The Matilda Effect</span>
+                    <a href="effetmatilda.html" class="menu__button menu__button--matilda"><span>The Matilda
+                            Effect</span>
                     </a>
                 </li>
                 <li>
@@ -54,11 +55,13 @@
                     </a>
                 </li>
                 <li>
-                    <a href="theimitationgame.html" class="menu__button menu__button--imitation"><span>The Imitation Game</span>
+                    <a href="theimitationgame.html" class="menu__button menu__button--imitation"><span>The Imitation
+                            Game</span>
                     </a>
                 </li>
                 <li>
-                    <a href="litterature.html" class="menu__button menu__button--literature"><span>Ada in Literature</span>
+                    <a href="litterature.html" class="menu__button menu__button--literature"><span>Ada in
+                            Literature</span>
                     </a>
                 </li>
             </ul>
@@ -108,7 +111,9 @@
             </h2>
         </section>
         <section class="image__representation">
-            <img src="../assets/img/Image2_page_Science.avif" alt="Image of Note G" loading="lazy">
+            <a href="https://en.wikipedia.org/wiki/Bernoulli_number" target="_blank" rel="noopener noreferrer">
+                <img src="../assets/img/Image2_page_Science.avif" alt="Image of Note G" loading="lazy">
+            </a>
         </section>
         <section class="citation">
             <blockquote>
