--- a/fr/adalovelace.html
+++ b/fr/adalovelace.html
@@ -54,11 +54,13 @@
                     </a>
                 </li>
                 <li>
-                    <a href="theimitationgame.html" class="menu__button menu__button--imitation"><span>The Imitation Game</span>
+                    <a href="theimitationgame.html" class="menu__button menu__button--imitation"><span>The Imitation
+                            Game</span>
                     </a>
                 </li>
                 <li>
-                    <a href="litterature.html" class="menu__button menu__button--literature"><span>Ada dans la littérature</span>
+                    <a href="litterature.html" class="menu__button menu__button--literature"><span>Ada dans la
+                            littérature</span>
                     </a>
                 </li>
             </ul>
