--- a/fr/litterature.html
+++ b/fr/litterature.html
@@ -54,11 +54,13 @@
                     </a>
                 </li>
                 <li>
-                    <a href="theimitationgame.html" class="menu__button menu__button--imitation"><span>The Imitation Game</span>
+                    <a href="theimitationgame.html" class="menu__button menu__button--imitation"><span>The Imitation
+                            Game</span>
                     </a>
                 </li>
                 <li>
-                    <a href="litterature.html" class="menu__button menu__button--literature"><span>Ada dans la littérature</span>
+                    <a href="litterature.html" class="menu__button menu__button--literature"><span>Ada dans la
+                            littérature</span>
                     </a>
                 </li>
             </ul>
@@ -101,6 +103,10 @@
                     souvent été minimisées ou oubliées au profit des hommes.</p>
             </div>
         </section>
+        <div class="external-link">
+            <a href="https://fr.wikipedia.org/wiki/Femmes_en_science" target="_blank" rel="noopener noreferrer"
+                class="external-link__button">En savoir plus</a>
+        </div>
     </main>
     <footer class="footer" role="contentinfo">
         <div class="footer__left">
