--- a/fr/scienceada.html
+++ b/fr/scienceada.html
@@ -54,11 +54,13 @@
                     </a>
                 </li>
                 <li>
-                    <a href="theimitationgame.html" class="menu__button menu__button--imitation"><span>The Imitation Game</span>
+                    <a href="theimitationgame.html" class="menu__button menu__button--imitation"><span>The Imitation
+                            Game</span>
                     </a>
                 </li>
                 <li>
-                    <a href="litterature.html" class="menu__button menu__button--literature"><span>Ada dans la littérature</span>
+                    <a href="litterature.html" class="menu__button menu__button--literature"><span>Ada dans la
+                            littérature</span>
                     </a>
                 </li>
             </ul>
@@ -110,7 +112,9 @@
             </h2>
         </section>
         <section class="image__representation">
-            <img src="../assets/img/Image2_page_Science.avif" alt="Image de la note G" loading="lazy">
+            <a href="https://fr.wikipedia.org/wiki/Nombre_de_Bernoulli" target="_blank" rel="noopener noreferrer">
+                <img src="../assets/img/Image2_page_Science.avif" alt="Image de la note G" loading="lazy">
+            </a>
         </section>
         <section class="citation">
             <blockquote>
