Correction d'un des liens

--- a/fr/litterature.html
+++ b/fr/litterature.html
@@ -104,8 +104,8 @@
             </div>
         </section>
         <div class="external-link">
-            <a href="https://fr.wikipedia.org/wiki/Femmes_en_science" target="_blank" rel="noopener noreferrer"
-                class="external-link__button">En savoir plus</a>
+            <a href="https://fr.wikipedia.org/wiki/Place_des_femmes_en_sciences" target="_blank"
+                rel="noopener noreferrer" class="external-link__button">En savoir plus</a>
         </div>
     </main>
     <footer class="footer" role="contentinfo">
