Changement au niveau des tailles

--- a/en/glossaire.html
+++ b/en/glossaire.html
@@ -46,7 +46,8 @@
                     </a>
                 </li>
                 <li>
-                    <a href="effetmatilda.html" class="menu__button menu__button--matilda"><span>The Matilda Effect</span>
+                    <a href="effetmatilda.html" class="menu__button menu__button--matilda"><span>The Matilda
+                            Effect</span>
                     </a>
                 </li>
                 <li>
@@ -54,11 +55,13 @@
                     </a>
                 </li>
                 <li>
-                    <a href="theimitationgame.html" class="menu__button menu__button--imitation"><span>The Imitation Game</span>
+                    <a href="theimitationgame.html" class="menu__button menu__button--imitation"><span>The Imitation
+                            Game</span>
                     </a>
                 </li>
                 <li>
-                    <a href="litterature.html" class="menu__button menu__button--literature"><span>Ada in Literature</span>
+                    <a href="litterature.html" class="menu__button menu__button--literature"><span>Ada in
+                            Literature</span>
                     </a>
                 </li>
             </ul>
@@ -74,7 +77,7 @@
     </nav>
 
     <main>
-        <section class="hero--glossaire">
+        <section class="hero">
         </section>
         <section class="Texte__principal-glossaire">
             <div class="navyblue__block">
