--- a/fr/scienceada.html
+++ b/fr/scienceada.html
@@ -119,7 +119,7 @@
         <section class="citation">
             <blockquote>
                 <p>« L’imagination est la faculté de découverte, par excellence. C’est celle qui pénètre dans les mondes
-                    invisibles qui nous entourent, les mondes de la science. »»</p>
+                    invisibles qui nous entourent, les mondes de la science. »</p>
             </blockquote>
         </section>
         <h2 class="citation__personne">Citation d’Ada Lovelace</h2>
