Chnagement sur les pages

--- a/en/litterature.html
+++ b/en/litterature.html
@@ -21,7 +21,7 @@
                 </div>
             </div>
         </section>
-        <h1 class="header__minititle">Ada in <br> Literature</h1>
+        <h1 class="header__title">Ada in <br> Literature</h1>
         <div class="language-selector" role="navigation" aria-label="Language selector">
             <a href="/fr/litterature.html" class="language-selector__link language-selector__link--active"
                 aria-label="Switch to French version">EN</a>
