--- a/en/theimitationgame.html
+++ b/en/theimitationgame.html
@@ -21,7 +21,7 @@
                 </div>
             </div>
         </section>
-        <h1 class="header__minititle">The Imitation <br> Game</h1>
+        <h1 class="header__title">The Imitation <br> Game</h1>
         <div class="language-selector" role="navigation" aria-label="Language selector">
             <a href="/fr/theimitationgame.html" class="language-selector__link language-selector__link--active"
                 aria-label="Switch to English version">EN</a>
@@ -46,7 +46,8 @@
                     </a>
                 </li>
                 <li>
-                    <a href="effetmatilda.html" class="menu__button menu__button--matilda"><span>The Matilda Effect</span>
+                    <a href="effetmatilda.html" class="menu__button menu__button--matilda"><span>The Matilda
+                            Effect</span>
                     </a>
                 </li>
                 <li>
@@ -54,11 +55,13 @@
                     </a>
                 </li>
                 <li>
-                    <a href="theimitationgame.html" class="menu__button menu__button--imitation"><span>The Imitation Game</span>
+                    <a href="theimitationgame.html" class="menu__button menu__button--imitation"><span>The Imitation
+                            Game</span>
                     </a>
                 </li>
                 <li>
-                    <a href="litterature.html" class="menu__button menu__button--literature"><span>Ada in Literature</span>
+                    <a href="litterature.html" class="menu__button menu__button--literature"><span>Ada in
+                            Literature</span>
                     </a>
                 </li>
             </ul>
