--- a/fr/litterature.html
+++ b/fr/litterature.html
@@ -21,7 +21,7 @@
                 </div>
             </div>
         </section>
-        <h1 class="header__minititle">Ada dans la <br> littérature</h1>
+        <h1 class="header__title">Ada dans la <br> littérature</h1>
         <div class="language-selector" role="navigation" aria-label="Sélecteur de langue">
             <a href="/en/litterature.html" class="language-selector__link language-selector__link--active"
                 aria-label="Passer à la version anglaise">FR</a>
