Ajout lien + autres projets

--- a/fr/autres-projets.html
+++ b/fr/autres-projets.html
@@ -54,11 +54,13 @@
                     </a>
                 </li>
                 <li>
-                    <a href="theimitationgame.html" class="menu__button menu__button--imitation"><span>The Imitation Game</span>
+                    <a href="theimitationgame.html" class="menu__button menu__button--imitation"><span>The Imitation
+                            Game</span>
                     </a>
                 </li>
                 <li>
-                    <a href="litterature.html" class="menu__button menu__button--literature"><span>Ada dans la littérature</span>
+                    <a href="litterature.html" class="menu__button menu__button--literature"><span>Ada dans la
+                            littérature</span>
                     </a>
                 </li>
             </ul>
@@ -86,7 +88,8 @@
                     <img src="../assets/img/image1_page_Autre.avif" alt="Logo du projet">
                 </div>
                 <div class="project-card__content">
-                    <h3 class="project-card__title">Étoiles Oubliées</h3>
+                    <h3 class="project-card__title"><a href="http://etoiles-oubliees.lilian-maitre.fr/fr/"
+                            target="_blank" rel="noopener noreferrer">Étoiles Oubliées</a></h3>
                     <p class="project-card__description">Projet de Lilian Maitre</p>
                 </div>
             </div>
@@ -98,7 +101,8 @@
                     <img src="../assets/img/image2_page_Autre.avif" alt="Logo du projet">
                 </div>
                 <div class="project-card__content">
-                    <h3 class="project-card__title">Empreinte</h3>
+                    <h3 class="project-card__title"><a href="https://empreinte.yanischouhib.fr/fr/" target="_blank"
+                            rel="noopener noreferrer">Empreinte</a></h3>
                     <p class="project-card__description">Projet de Yanis Chouhib</p>
                 </div>
             </div>
@@ -109,7 +113,8 @@
                     <img src="../assets/img/image3_page_Autre.avif" alt="Logo du projet">
                 </div>
                 <div class="project-card__content">
-                    <h3 class="project-card__title">Jocelynn Bell</h3>
+                    <h3 class="project-card__title"><a href="https://jocelynbell.netlify.app/fr/" target="_blank"
+                            rel="noopener noreferrer">Jocelynn Bell</a></h3>
                     <p class="project-card__description">Projet de Estelle Coulon</p>
                 </div>
             </div>
@@ -121,7 +126,8 @@
                     <img src="../assets/img/image4_page_Autre.avif" alt="Logo du projet">
                 </div>
                 <div class="project-card__content">
-                    <h3 class="project-card__title">AQITA</h3>
+                    <h3 class="project-card__title"><a href="https://fr.wikipedia.org/wiki/Informatique" target="_blank"
+                            rel="noopener noreferrer">AQITA</a></h3>
                     <p class="project-card__description">Projet de Melvyn Philippon</p>
                 </div>
             </div>
@@ -132,7 +138,8 @@
                     <img src="../assets/img/image5_page_Autre.avif" alt="Logo du projet">
                 </div>
                 <div class="project-card__content">
-                    <h3 class="project-card__title">Radiance</h3>
+                    <h3 class="project-card__title"><a href="http://radiance.alex-ringenbach.fr/" target="_blank"
+                            rel="noopener noreferrer">Radiance</a></h3>
                     <p class="project-card__description">Projet de Alex Ringerbach</p>
                 </div>
             </div>
@@ -144,7 +151,8 @@
                     <img src="../assets/img/image6_page_Autre.avif" alt="Logo du projet">
                 </div>
                 <div class="project-card__content">
-                    <h3 class="project-card__title">Empreintes féminines dans la science</h3>
+                    <h3 class="project-card__title"><a href="https://fr.wikipedia.org/wiki/Femmes_en_science"
+                            target="_blank" rel="noopener noreferrer">Empreintes féminines dans la science</a></h3>
                     <p class="project-card__description">Projet de Maman Thilor Sambe</p>
                 </div>
             </div>
@@ -155,7 +163,9 @@
                     <img src="../assets/img/image7_page_Autre.avif" alt="Logo du projet">
                 </div>
                 <div class="project-card__content">
-                    <h3 class="project-card__title">Marie Meurdrac: l'essence d'une femme de science</h3>
+                    <h3 class="project-card__title"><a href="https://fr.wikipedia.org/wiki/Marie_Meurdrac"
+                            target="_blank" rel="noopener noreferrer">Marie Meurdrac: l'essence d'une femme de
+                            science</a></h3>
                     <p class="project-card__description">Projet de Ines Sittler</p>
                 </div>
             </div>
@@ -167,8 +177,22 @@
                     <img src="../assets/img/image8_page_Autre.avif" alt="Logo du projet">
                 </div>
                 <div class="project-card__content">
-                    <h3 class="project-card__title">Devlace</h3>
+                    <h3 class="project-card__title"><a href="http://devlace.pierre-mouilleseaux-lhuillier.fr/"
+                            target="_blank" rel="noopener noreferrer">Devlace</a></h3>
                     <p class="project-card__description">Projet de Pierre Mouilleseaux</p>
+                </div>
+            </div>
+
+            <div class="project-divider"></div>
+
+            <div class="project-card">
+                <div class="project-card__image">
+                    <img src="../assets/img/image9_page_Autre.avif" alt="Project logo">
+                </div>
+                <div class="project-card__content">
+                    <h3 class="project-card__title"><a href="http://chronova.linabenmabrouk.fr/" target="_blank"
+                            rel="noopener noreferrer">Chronova</a></h3>
+                    <p class="project-card__description">Projet de Lina Ben Mabrouk</p>
                 </div>
             </div>
         </div>
