--- a/en/autres-projets.html
+++ b/en/autres-projets.html
@@ -46,7 +46,8 @@
                     </a>
                 </li>
                 <li>
-                    <a href="effetmatilda.html" class="menu__button menu__button--matilda"><span>The Matilda Effect</span>
+                    <a href="effetmatilda.html" class="menu__button menu__button--matilda"><span>The Matilda
+                            Effect</span>
                     </a>
                 </li>
                 <li>
@@ -54,11 +55,13 @@
                     </a>
                 </li>
                 <li>
-                    <a href="theimitationgame.html" class="menu__button menu__button--imitation"><span>The Imitation Game</span>
+                    <a href="theimitationgame.html" class="menu__button menu__button--imitation"><span>The Imitation
+                            Game</span>
                     </a>
                 </li>
                 <li>
-                    <a href="litterature.html" class="menu__button menu__button--literature"><span>Ada in Literature</span>
+                    <a href="litterature.html" class="menu__button menu__button--literature"><span>Ada in
+                            Literature</span>
                     </a>
                 </li>
             </ul>
@@ -84,7 +87,8 @@
                     <img src="../assets/img/image1_page_Autre.avif" alt="Logo du projet">
                 </div>
                 <div class="project-card__content">
-                    <h3 class="project-card__title">Étoiles Oubliées</h3>
+                    <h3 class="project-card__title"><a href="http://etoiles-oubliees.lilian-maitre.fr/en/"
+                            target="_blank" rel="noopener noreferrer">Étoiles Oubliées</a></h3>
                     <p class="project-card__description">Project by Lilian Maitre</p>
                 </div>
             </div>
@@ -96,7 +100,8 @@
                     <img src="../assets/img/image2_page_Autre.avif" alt="Project logo">
                 </div>
                 <div class="project-card__content">
-                    <h3 class="project-card__title">Empreinte</h3>
+                    <h3 class="project-card__title"><a href="https://empreinte.yanischouhib.fr/en/" target="_blank"
+                            rel="noopener noreferrer">Empreinte</a></h3>
                     <p class="project-card__description">Project by Yanis Chouhib</p>
                 </div>
             </div>
@@ -107,7 +112,8 @@
                     <img src="../assets/img/image3_page_Autre.avif" alt="Project logo">
                 </div>
                 <div class="project-card__content">
-                    <h3 class="project-card__title">Jocelynn Bell</h3>
+                    <h3 class="project-card__title"><a href="https://jocelynbell.netlify.app/en/" target="_blank"
+                            rel="noopener noreferrer">Jocelynn Bell</a></h3>
                     <p class="project-card__description">Project by Estelle Coulon</p>
                 </div>
             </div>
@@ -119,7 +125,8 @@
                     <img src="../assets/img/image4_page_Autre.avif" alt="Project logo">
                 </div>
                 <div class="project-card__content">
-                    <h3 class="project-card__title">AQITA</h3>
+                    <h3 class="project-card__title"><a href="https://en.wikipedia.org/wiki/Computer_science"
+                            target="_blank" rel="noopener noreferrer">AQITA</a></h3>
                     <p class="project-card__description">Project by Melvyn Philippon</p>
                 </div>
             </div>
@@ -130,7 +137,8 @@
                     <img src="../assets/img/image5_page_Autre.avif" alt="Project logo">
                 </div>
                 <div class="project-card__content">
-                    <h3 class="project-card__title">Radiance</h3>
+                    <h3 class="project-card__title"><a href="http://radiance.alex-ringenbach.fr/" target="_blank"
+                            rel="noopener noreferrer">Radiance</a></h3>
                     <p class="project-card__description">Project by Alex Ringerbach</p>
                 </div>
             </div>
@@ -142,7 +150,8 @@
                     <img src="../assets/img/image6_page_Autre.avif" alt="Project logo">
                 </div>
                 <div class="project-card__content">
-                    <h3 class="project-card__title">Empreintes féminines dans la science</h3>
+                    <h3 class="project-card__title"><a href="https://en.wikipedia.org/wiki/Women_in_science"
+                            target="_blank" rel="noopener noreferrer">Empreintes féminines dans la science</a></h3>
                     <p class="project-card__description">Project by Maman Thilor Sambe</p>
                 </div>
             </div>
@@ -153,7 +162,9 @@
                     <img src="../assets/img/image7_page_Autre.avif" alt="Project logo">
                 </div>
                 <div class="project-card__content">
-                    <h3 class="project-card__title">Marie Meurdrac: l'essence d'une femme de science</h3>
+                    <h3 class="project-card__title"><a href="https://en.wikipedia.org/wiki/Marie_Meurdrac"
+                            target="_blank" rel="noopener noreferrer">Marie Meurdrac: l'essence d'une femme de
+                            science</a></h3>
                     <p class="project-card__description">Project by Ines Sittler</p>
                 </div>
             </div>
@@ -165,8 +176,22 @@
                     <img src="../assets/img/image8_page_Autre.avif" alt="Project logo">
                 </div>
                 <div class="project-card__content">
-                    <h3 class="project-card__title">Devlace</h3>
+                    <h3 class="project-card__title"><a href="http://devlace.pierre-mouilleseaux-lhuillier.fr/"
+                            target="_blank" rel="noopener noreferrer">Devlace</a></h3>
                     <p class="project-card__description">Project by Pierre Mouilleseaux</p>
+                </div>
+            </div>
+
+            <div class="project-divider"></div>
+
+            <div class="project-card">
+                <div class="project-card__image">
+                    <img src="../assets/img/image9_page_Autre.avif" alt="Project logo">
+                </div>
+                <div class="project-card__content">
+                    <h3 class="project-card__title"><a href="http://chronova.linabenmabrouk.fr/" target="_blank"
+                            rel="noopener noreferrer">Chronova</a></h3>
+                    <p class="project-card__description">Project by Lina Ben Mabrouk</p>
                 </div>
             </div>
         </div>
