--- a/fr/autres-projets.html
+++ b/fr/autres-projets.html
@@ -187,7 +187,7 @@
 
             <div class="project-card">
                 <div class="project-card__image">
-                    <img src="../assets/img/image9_page_Autre.avif" alt="Project logo">
+                    <img src="../assets/img/image9_page_Autre.svg" alt="Logo du projet">
                 </div>
                 <div class="project-card__content">
                     <h3 class="project-card__title"><a href="http://chronova.linabenmabrouk.fr/" target="_blank"
