Ajout de favicon

--- a/en/autres-projets.html
+++ b/en/autres-projets.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Other Projects</title>
+    <link rel="icon" type="image/svg+xml" href="../assets/img/logo ADA.svg">
     <link rel="stylesheet" href="../src/css/style.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=IBM+Plex+Mono&display=swap">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Elsie+Swash+Caps&display=swap">
@@ -125,7 +126,7 @@
                     <img src="../assets/img/image4_page_Autre.avif" alt="Project logo">
                 </div>
                 <div class="project-card__content">
-                    <h3 class="project-card__title"><a href="https://en.wikipedia.org/wiki/Computer_science"
+                    <h3 class="project-card__title"><a href="https://illustrious-twilight-b79ac1.netlify.app/"
                             target="_blank" rel="noopener noreferrer">AQITA</a></h3>
                     <p class="project-card__description">Project by Melvyn Philippon</p>
                 </div>
