--- a/fr/glossaire.html
+++ b/fr/glossaire.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Glossaire</title>
+    <link rel="icon" type="image/svg+xml" href="../assets/img/logo ADA.svg">
     <link rel="stylesheet" href="../src/css/style.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=IBM+Plex+Mono&display=swap">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Elsie+Swash+Caps&display=swap">
@@ -54,11 +55,13 @@
                     </a>
                 </li>
                 <li>
-                    <a href="theimitationgame.html" class="menu__button menu__button--imitation"><span>The Imitation Game</span>
+                    <a href="theimitationgame.html" class="menu__button menu__button--imitation"><span>The Imitation
+                            Game</span>
                     </a>
                 </li>
                 <li>
-                    <a href="litterature.html" class="menu__button menu__button--literature"><span>Ada dans la littérature</span>
+                    <a href="litterature.html" class="menu__button menu__button--literature"><span>Ada dans la
+                            littérature</span>
                     </a>
                 </li>
             </ul>
