--- a/fr/autres-projets.html
+++ b/fr/autres-projets.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Autres Projets</title>
+    <link rel="icon" type="image/svg+xml" href="../assets/img/logo ADA.svg">
     <link rel="stylesheet" href="../src/css/style.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=IBM+Plex+Mono&display=swap">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Elsie+Swash+Caps&display=swap">
@@ -126,8 +127,8 @@
                     <img src="../assets/img/image4_page_Autre.avif" alt="Logo du projet">
                 </div>
                 <div class="project-card__content">
-                    <h3 class="project-card__title"><a href="https://fr.wikipedia.org/wiki/Informatique" target="_blank"
-                            rel="noopener noreferrer">AQITA</a></h3>
+                    <h3 class="project-card__title"><a href="https://illustrious-twilight-b79ac1.netlify.app/"
+                            target="_blank" rel="noopener noreferrer">AQITA</a></h3>
                     <p class="project-card__description">Projet de Melvyn Philippon</p>
                 </div>
             </div>
