--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ada Lovelace - Redirection</title>
+    <link rel="icon" type="image/svg+xml" href="assets/img/logo ADA.svg">
     <meta http-equiv="refresh" content="0; url=fr/index.html">
     <script>
         window.location.href = "fr/index.html";
