Ajout des vidéos via la supprémation du gitignore dans la case vidéo

--- a/en/autres-projets.html
+++ b/en/autres-projets.html
@@ -163,9 +163,8 @@
                     <img src="../assets/img/image7_page_Autre.avif" alt="Project logo">
                 </div>
                 <div class="project-card__content">
-                    <h3 class="project-card__title"><a href="https://en.wikipedia.org/wiki/Marie_Meurdrac"
-                            target="_blank" rel="noopener noreferrer">Marie Meurdrac: l'essence d'une femme de
-                            science</a></h3>
+                    <h3 class="project-card__title"><a href="http://meurdrac.ines-sittler.fr/" target="_blank"
+                            rel="noopener noreferrer">Meurdrac</a></h3>
                     <p class="project-card__description">Project by Ines Sittler</p>
                 </div>
             </div>
