--- a/fr/autres-projets.html
+++ b/fr/autres-projets.html
@@ -164,9 +164,8 @@
                     <img src="../assets/img/image7_page_Autre.avif" alt="Logo du projet">
                 </div>
                 <div class="project-card__content">
-                    <h3 class="project-card__title"><a href="https://fr.wikipedia.org/wiki/Marie_Meurdrac"
-                            target="_blank" rel="noopener noreferrer">Marie Meurdrac: l'essence d'une femme de
-                            science</a></h3>
+                    <h3 class="project-card__title"><a href="http://meurdrac.ines-sittler.fr/" target="_blank"
+                            rel="noopener noreferrer">Meurdrac</a></h3>
                     <p class="project-card__description">Projet de Ines Sittler</p>
                 </div>
             </div>
