Changement de couleur + ajout lien readme

--- a/en/a-propos.html
+++ b/en/a-propos.html
@@ -83,8 +83,8 @@
                 <img src="../assets/img/hero_page_Apropos.avif" alt="Hero of the about page">
             </div>
         </section>
-        <section class="text-blue">
-            <div class="text-blue__content">
+        <section class="text-navyblue">
+            <div class="text-navyblue__content">
                 <p> This site was created by Virgile Esnaux as part of a pedagogical project carried out in 2025 in the
                     MMI department of Montbéliard.
                     This work is part of a reflection on the Matilda effect, a historical phenomenon that reveals the
