--- a/fr/a-propos.html
+++ b/fr/a-propos.html
@@ -84,8 +84,8 @@
                 <img src="../assets/img/hero_page_Apropos.avif" alt="Hero de la page à propos">
             </div>
         </section>
-        <section class="text-blue">
-            <div class="text-blue__content">
+        <section class="text-navyblue">
+            <div class="text-navyblue__content">
                 <p> Ce site a été créé par Virgile Esnaux dans le cadre d’un projet pédagogique réalisé en 2025 au
                     département MMI de Montbéliard.
                     Ce travail s’inscrit dans une réflexion sur l’effet Matilda, phénomène historique qui révèle la
