Racoursicement page d'accueil

--- a/en/index.html
+++ b/en/index.html
@@ -92,13 +92,8 @@
         <section class="Texte__principal-accueil">
             <div class="navyblue__block">
                 <p>Women have always played a crucial role in science, yet their contributions have frequently been
-                    minimized, forgotten, or wrongly attributed to male colleagues. This historical injustice, still
-                    perceptible today, fuels a persistent underrepresentation of women in research and in the media
-                    coverage of their discoveries.
-                <p>Among these forgotten figures, Ada Lovelace stands out as a major pioneer. Born in 1815, she is the
-                    daughter of the famous poet Lord Byron and a mother passionate about mathematics, who instills in
-                    her an early taste for the sciences. Ada Lovelace trains with great mathematicians of her time,
-                    including Charles Babbage, inventor of the analytical engine, an ancestor of the modern computer.
+                    minimized, forgotten, or wrongly attributed to male colleagues. </p>
+                <p>Among these forgotten figures, Ada Lovelace stands out as a major pioneer.
                 </p>
             </div>
         </section>
