--- a/fr/index.html
+++ b/fr/index.html
@@ -95,16 +95,7 @@
             <div class="navyblue__block">
                 <p>Les femmes ont toujours joué un rôle crucial dans la science, pourtant leur
                     contribution a fréquemment été minimisée, oubliée ou attribuée à tort à des collègues masculins.
-                    Cette
-                    injustice historique, encore perceptible aujourd’hui, alimente une sous-représentation persistante
-                    des
-                    femmes dans la recherche et dans la médiatisation de leurs découvertes.
-                <p>Parmi ces figures oubliées, Ada Lovelace se distingue comme une pionnière majeure. Née en 1815, elle
-                    est
-                    la fille du célèbre poète Lord Byron et d’une mère passionnée de mathématiques, qui lui transmet un
-                    goût
-                    précoce pour les sciences. Ada Lovelace se forme auprès de grands mathématiciens de son temps, dont
-                    Charles Babbage, inventeur de la machine analytique, un ancêtre de l’ordinateur moderne.</p>
+                <p>Parmi ces figures oubliées, Ada Lovelace se distingue comme une pionnière majeure.</p>
             </div>
         </section>
         <section class="youtube_video">
