dernier commit et push ajoutant le projet de maman thilor sambe

--- a/en/autres-projets.html
+++ b/en/autres-projets.html
@@ -151,7 +151,7 @@
                     <img src="../assets/img/image6_page_Autre.avif" alt="Project logo">
                 </div>
                 <div class="project-card__content">
-                    <h3 class="project-card__title"><a href="https://en.wikipedia.org/wiki/Women_in_science"
+                    <h3 class="project-card__title"><a href="https://iridescent-llama-dfa706.netlify.app/en/"
                             target="_blank" rel="noopener noreferrer">Empreintes féminines dans la science</a></h3>
                     <p class="project-card__description">Project by Maman Thilor Sambe</p>
                 </div>
