--- a/fr/autres-projets.html
+++ b/fr/autres-projets.html
@@ -152,7 +152,7 @@
                     <img src="../assets/img/image6_page_Autre.avif" alt="Logo du projet">
                 </div>
                 <div class="project-card__content">
-                    <h3 class="project-card__title"><a href="https://fr.wikipedia.org/wiki/Femmes_en_science"
+                    <h3 class="project-card__title"><a href="https://iridescent-llama-dfa706.netlify.app/fr/"
                             target="_blank" rel="noopener noreferrer">Empreintes féminines dans la science</a></h3>
                     <p class="project-card__description">Projet de Maman Thilor Sambe</p>
                 </div>
